Implemented coreference resolution for english

--- a/ECKG/requirements.txt
+++ b/ECKG/requirements.txt
@@ -1,12 +1,12 @@
-lxml
-beautifulsoup4
-numpy
-scikit-learn
-torch
+lxml==4.6.4
+beautifulsoup4==4.10.0
+numpy==1.21.4
+scikit-learn==1.0.1
+torch==1.10.0
 neleval==3.1.1
 pyjarowinkler==1.8
-allennlp
-transformers
+allennlp==2.8.0
+transformers==4.12.5
 pandas
 python-Levenshtein
 fuzzywuzzy
@@ -14,3 +14,8 @@ simstring-pure
 progressbar2
 networkx
 matplotlib
+spacy>=3.0.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
+https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.0.0/en_core_web_lg-3.0.0.tar.gz
+https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.0.0/en_core_web_trf-3.0.0-py3-none-any.whl
+coreferee
