--- a/ECKG/requirements.txt
+++ b/ECKG/requirements.txt
@@ -19,3 +19,9 @@ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.0.0/en_core_web_lg-3.0.0.tar.gz
 https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.0.0/en_core_web_trf-3.0.0-py3-none-any.whl
 coreferee
+tqdm
+networkx
+matplotlib
+classla
+stanza
+nltk
